# OS

laba1/: creator.cpp  main.cpp  reporter.cpp
laba2/: CMakeLists.txt  laba2.cpp
laba2/tests/: CMakeLists.txt  test_main.cpp
laba3/: CMakeLists.txt  main
laba3/tests/: CMakeLists.txt  test_main.cpp
laba4/: CMakeLists.txt  Main.cpp  Marker.cpp  Sender.cpp
laba4/tests/: CMakeLists.txt  test_receiver.cpp  test_sender.cpp
